--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2018.4.16
 click==6.7
+gunicorn==19.9.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
@@ -7,6 +8,7 @@ Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.14.5
 pandas==0.23.3
+psycopg2==2.7.6.1
 python-dateutil==2.7.3
 pytz==2018.5
 six==1.11.0
